*changed project names

--- a/RmiPi/.project
+++ b/RmiPi/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>OculusbotServerPi</name>
+	<name>RmiPi</name>
 	<comment></comment>
 	<projects>
 	</projects>
