--- a/RmiShared/.project
+++ b/RmiShared/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>OculusbotShared</name>
+	<name>RmiShared</name>
 	<comment></comment>
 	<projects>
 	</projects>
