--- a/RmiServer/pom.xml
+++ b/RmiServer/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>oculusbot</groupId>
-	<artifactId>OculusbotServerMain</artifactId>
+	<artifactId>RmiServer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<build>
 		<plugins>
@@ -46,14 +46,14 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>oculusbot</groupId>
-			<artifactId>OculusbotShared</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
 			<groupId>com.jcraft</groupId>
 			<artifactId>jsch</artifactId>
 			<version>0.1.53</version>
+		</dependency>
+		<dependency>
+			<groupId>oculusbot</groupId>
+			<artifactId>RmiShared</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
