--- a/RmiClient/pom.xml
+++ b/RmiClient/pom.xml
@@ -7,15 +7,6 @@
 	<build>
 		<plugins>
 			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.5.1</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-			
-			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>2.6</version>
 				<configuration>
@@ -26,7 +17,7 @@
 					<finalName>${filename}</finalName>
 					<archive>
 						<manifest>
-							<mainClass>oculusbot.network.client.OculusbotClientMain</mainClass>
+							<mainClass>oculusbot.network.client.RMIClientMain</mainClass>
 							<addClasspath>true</addClasspath>
 						</manifest>
 					</archive>
@@ -41,19 +32,104 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<plugin>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.9</version>
+				<configuration>
+					<artifactItems>
+						<artifactItem>
+							<groupId>org.lwjgl</groupId>
+							<artifactId>lwjgl</artifactId>
+							<version>${lwjgl.version}</version>
+							<classifier>${lwjgl.natives}</classifier>
+							<overWrite>true</overWrite>
+							<outputDirectory>${project.build.directory}/natives</outputDirectory>
+						</artifactItem>
+
+						<artifactItem>
+							<groupId>org.lwjgl</groupId>
+							<artifactId>lwjgl-glfw</artifactId>
+							<version>${lwjgl.version}</version>
+							<classifier>${lwjgl.natives}</classifier>
+							<overWrite>true</overWrite>
+							<outputDirectory>${project.build.directory}/natives</outputDirectory>
+						</artifactItem>
+
+						<artifactItem>
+							<groupId>org.lwjgl</groupId>
+							<artifactId>lwjgl-ovr</artifactId>
+							<version>${lwjgl.version}</version>
+							<classifier>${lwjgl.natives}</classifier>
+							<overWrite>true</overWrite>
+							<outputDirectory>${project.build.directory}/natives</outputDirectory>
+						</artifactItem>
+
+						<artifactItem>
+							<groupId>opencv</groupId>
+							<artifactId>opencv-natives</artifactId>
+							<version>3.1.0</version>
+							<overWrite>true</overWrite>
+							<outputDirectory>${project.build.directory}/natives</outputDirectory>
+							<includes>**/*.dll</includes>
+						</artifactItem>
+					</artifactItems>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
 	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<lwjgl.version>3.0.1-SNAPSHOT</lwjgl.version>
-		<filename>OculusbotClient</filename>
+		<filename>RMIClient</filename>
 	</properties>
+
+	<profiles>
+		<profile>
+			<id>lwjgl-natives-linux></id>
+			<activation>
+				<os>
+					<family>unix</family>
+				</os>
+			</activation>
+			<properties>
+				<lwjgl.natives>natives-linux</lwjgl.natives>
+			</properties>
+		</profile>
+		<profile>
+			<id>lwjgl-natives-macos></id>
+			<activation>
+				<os>
+					<family>mac</family>
+				</os>
+			</activation>
+			<properties>
+				<lwjgl.natives>natives-macos</lwjgl.natives>
+			</properties>
+		</profile>
+		<profile>
+			<id>lwjgl-natives-windows></id>
+			<activation>
+				<os>
+					<family>windows</family>
+				</os>
+			</activation>
+			<properties>
+				<lwjgl.natives>natives-windows</lwjgl.natives>
+			</properties>
+		</profile>
+	</profiles>
+
 	<repositories>
 		<repository>
-			<id>oss-sonatype</id>
-			<name>oss-sonatype</name>
-			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+			<id>sonatype-snapshots</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
