--- a/RmiServer/src/main/resources/config/default_server.cfg
+++ b/RmiServer/src/main/resources/config/default_server.cfg
@@ -1,3 +1,10 @@
 port.discovery=1337
 port.bot=1338
 port.video=1339
+pi.hostname=oculusbot
+pi.user=pi
+pi.password=raspberry
+cam.width=640
+cam.height=360
+cam.id.left=0
+cam.id.right=1
