--- a/RmiServer/server.cfg
+++ b/RmiServer/server.cfg
@@ -1,10 +1,12 @@
-port.discovery=1337
-port.bot=1338
-port.video=1339
-pi.hostname=oculusbot
+#
+#Sun Oct 23 16:26:49 CEST 2016
 pi.user=pi
+cam.id.right=1
+pi.hostname=oculusbot
 pi.password=raspberry
-cam.width=640
-cam.height=360
-cam.id.left=10
-cam.id.right=20
+port.video=1339
+cam.id.left=0
+port.bot=1338
+cam.width=1280
+cam.height=720
+port.discovery=1337
